@@ -456,7 +456,7 @@ p.demo_store,
 			}
 		}
 
-		.suki-woocommerc-single-gallery {
+		.suki-woocommerce-single-gallery {
 			position: relative;
 
 			@media screen and ( min-width: $breakpoint_1024 ) {
